# fastapi_ecommerce

./: README.md  alembic.ini  ecommerce.db  pyproject.toml
app/: database.py  main.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 09b52063ce41_create_categories_and_products_tables.py
app/models/: __init__.py  categories.py  products.py
app/routers/: categories.py  products.py
